<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signUpEmail_t"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/signUpEmail"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/signUpEmail_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <TextView
        android:id="@+id/signUpEmail_t_err"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signUpPassword_t"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/signUpPassword"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/signUpPassword_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="2"/>
    </LinearLayout>
    <TextView
        android:id="@+id/signUpPassword_t_err"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signUppassword2_t"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/signUpPassword2"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/signUpPassword2_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="2"/>
    </LinearLayout>
    <TextView
        android:id="@+id/signUpPassword2_t_err"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signUpName_t"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/signUpName"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/signUpName_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <TextView
        android:id="@+id/signUpName_t_err"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/signUpGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/signUpMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpGenderMan"/>

        <RadioButton
            android:id="@+id/signUpFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpGenderWoman"/>
    </RadioGroup>

    <TextView
        android:id="@+id/signUpGender_t_err"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signUpAge_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"/>
        <EditText
            android:id="@+id/signUpAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:width="100dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/signUpAge_t_err"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/signUpGetImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpImage"/>
        <ImageView
            android:id="@+id/singUpShowImage"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>
    <Button
        android:id="@+id/doSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"/>

</LinearLayout>